# eva-autonomous-vehicle

./: README.md
Docs/: index.html
Vehicle_HMI/: CMakeLists.txt  Main.old2.qml  Main.old3.qml  Main.qml  Main.qml.backup  Main.qml.old  MapRouteDisplay.qml  RouteInfoPanel.qml  RouteService.cpp  RouteService.cpp.old  RouteService.h  RouteService.h.old  VehicleStatusPanel.qml  main.cpp  resources.qrc
Vehicle_HMI/ui/Background_frame/: BackgroundFrame.qml
Vehicle_HMI/ui/Navigation/: NavigationPanel.qml
Vehicle_HMI/ui/StatusIndicators/: StatusIndicators.qml
Vehicle_HMI/ui/TopBar/: TopBar.qml
